noinst_HEADERS = \
corosync/coroapi.h \
corosync/icmap.h \
corosync/ipc_cfg.h \
corosync/ipc_cmap.h \
corosync/ipc_cpg.h \
corosync/ipc_quorum.h \
corosync/ipc_votequorum.h \
corosync/list.h \
corosync/logsys.h \
corosync/mar_gen.h \
corosync/quorum.h \
corosync/sq.h \
corosync/swab.h


nobase_include_HEADERS = \
corosync/cfg.h \
corosync/cmap.h \
corosync/corodefs.h \
corosync/corotypes.h \
corosync/cpg.h \
corosync/hdb.h \
corosync/quorum.h \
corosync/sam.h \
corosync/votequorum.h \
corosync/totem/totem.h \
corosync/totem/totemip.h \
corosync/totem/totempg.h

